--- a/src/main/resources/static/scheckoutForm.html
+++ b/src/main/resources/static/scheckoutForm.html
@@ -8,50 +8,50 @@
     <title>Billing</title>
 </head>
 
-<body class="bg">
+<body class="bg-light">
 
     <div class="h1 text-center m-3 p-3">Billing address</div>
     <form action="/scheckoutResponseServlet" method="get">
     <div class="container">
         <br>
         <div class="row">
+            <div class="col p-2">
+                <label for="myfirst" class="form-label">First name </label>
+                <input class="form-control" type="text" name="First_name" , id="myfirst">
+            </div>
+            <div class="col p-2">
+                <label for="mylast" class="form-label">Last name </label>
+                <input class="form-control" type="text" name="Last_name" , id="mylast">
+            </div>
+
+
+            <div class="col-12 p-2">
+                <label for="myname" class="form-label">Username </label>
+                <input class="form-control" type="text" name="Username" , id="myname">
+            </div>
+
+
+            <div class="col-12 p-2">
+                <label for="myemail" class="form-label">Email</label>
+                <input class="form-control" type="email" name="Email" , id="myemail">
+            </div>
+
+
+            <div class="col-12 p-2">
+                <label for="myadress" class="form-label">Address</label>
+                <input class="form-control" type="text" name="Address" , id="myadress">
+            </div>
+
+
+            <div class="col-12 p-2">
+                <label for="myadress2" class="form-label">Address 2 (Optional)</label>
+                <input class="form-control" type="text" name="Address2" , id="myadress2">
+            </div>
+
+
             <div class="col-6 p-2">
-                <label for="myfirst">First name </label>
-                <input type="text" name="First_name" , id="myfirst">
-            </div>
-            <div class="col-6 p-2">
-                <label for="mylast">Last name </label>
-                <input type="text" name="Last_name" , id="mylast">
-            </div>
-
-
-            <div class="col-12 p-2">
-                <label for="myname">Username </label>
-                <input type="text" name="Username" , id="myname">
-            </div>
-
-
-            <div class="col-12 p-2">
-                <label for="myemail">Email</label>
-                <input type="email" name="Email" , id="myemail">
-            </div>
-
-
-            <div class="col-12 p-2">
-                <label for="myadress">Address</label>
-                <input type="text" name="Address" , id="myadress">
-            </div>
-
-
-            <div class="col-12 p-2">
-                <label for="myadress2">Address 2 (Optional)</label>
-                <input type="text" name="Address2" , id="myadress2">
-            </div>
-
-
-            <div class="col-6 p-2">
-                <label for="mycountry">Country </label>
-                <select name="Country" id="mycountry">
+                <label for="mycountry" class="form-label">Country </label>
+                <select class="form-select" name="Country" id="mycountry">
                     <option value=" ">Choosing...</option>
                     <option value="korea">KOREA</option>
                     <option value="canada">CANADA</option>
@@ -59,8 +59,8 @@
                 </select>
             </div>
             <div class="col-4 p-2">
-                <label for="mystate">State </label>
-                <select name="State" id="mystate">
+                <label for="mystate" class="form-label">State </label>
+                <select class="form-select"name="State" id="mystate">
                     <option value=" ">Choosing...</option>
                     <option value="seoul">SEOUL</option>
                     <option value="ottawa">OTTAWA</option>
@@ -69,14 +69,14 @@
 
             </div>
             <div class="col-2 p-2">
-                <label for="myzip">Zip </label>
-                <input type="text" name="Zip" , id="myzip">
+                <label for="myzip" class="form-label">Zip </label>
+                <input class="form-control" type="text" name="Zip" , id="myzip">
             </div>
 
         </div>
-
+        <div> <button type="submit" class="btn btn-primary">SEND</button></div>
     </div>
-    <div> <button type="submit bt-summary">SEND</button></div>
+    
 </form>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
