--- a/src/main/resources/static/connect_DB_Servlet.html
+++ b/src/main/resources/static/connect_DB_Servlet.html
@@ -12,15 +12,18 @@
     <div class="container">
         <table class="table table-bordered table-hover">
             <thead>
+                
                 <tr>
-                    <th>COMPANY_ID</th>
-                    <th>COMPANY</th>                   
+                    <th colspan = "2">COMPANY_ID</th>
+                    <th colspan = "2">COMPANY</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>John</td>
-                    <td>Doe</td>                   
+                    <td>Doe</td>
+                    <td>John</td>
+                    <td>Doe</td>
                 </tr>
             </tbody>
         </table>
