--- a/src/main/resources/static/cars/option_Infors.html
+++ b/src/main/resources/static/cars/option_Infors.html
@@ -11,17 +11,27 @@
 
 <body>
     <div class="container">
+        <form action="http://192.168.0.46:8080/optionInforsServlet">
+            <label for="go">검색</label>
+            <input type="text" name="search" id="go">
+            <button type="submit" class="bg-gray">검색하기</button>
+            
+        </form>
+    </div>
+    <div class="container">
         <table class="table table-bordered table-hover">
             <thead>
                 <tr>
                     <th>OPTION_INFOR_ID</th>
                     <th>OPTION_NAME</th>
+                    <th>DELETE</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <td>OPTION_INFOR_ID</td>
                     <td>OPTION_NAME</td>
+                    <td><button class="bg-gray" formaction="http://192.168.0.46:8080/optionInforsDeleteServlet">Delete</button></td>
                 </tr>
 
             </tbody>
@@ -30,4 +40,5 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
